# Challenge-Kinematics

./: .gitmodules  Force_Sensor.ino  Haptic_Teleoperation_DreamTeam.tex  README.md  reporte.tex
experiments/: collisions_20260312_134439.csv  collisions_20260312_134548.csv  collisions_20260312_134807.csv  collisions_20260312_135843.csv  collisions_20260312_140052.csv  collisions_20260312_144414.csv  collisions_20260312_144544.csv  collisions_20260312_144637.csv  collisions_20260312_144731.csv  collisions_20260312_144815.csv  collisions_20260312_144910.csv  collisions_20260312_145024.csv  collisions_20260312_145219.csv  collisions_20260312_145345.csv  collisions_20260312_145449.csv  generate_report_figures.py  plot_all.py  teleop_20260312_134439.csv  teleop_20260312_134548.csv  teleop_20260312_134807.csv  teleop_20260312_135843.csv  teleop_20260312_140052.csv  teleop_20260312_144414.csv  teleop_20260312_144544.csv  teleop_20260312_144637.csv  teleop_20260312_144731.csv  teleop_20260312_144815.csv  teleop_20260312_144910.csv  teleop_20260312_145024.csv  teleop_20260312_145219.csv  teleop_20260312_145345.csv  teleop_20260312_145449.csv
simulation/: master_robot.py  net_test.py  slave_robot.py
src/: force_stop_node.py  recover_slave.py  teach_master.py
src/haptic_teleop/: README.md  package.xml  setup.cfg  setup.py
src/haptic_teleop/config/: teleop_params.yaml
src/haptic_teleop/haptic_teleop/: __init__.py  bilateral_teleop.py  collision_feedback_node.py  force_dashboard.py  force_stop_node.py  master_teleop.py
src/haptic_teleop/launch/: bilateral_teleop.launch.py
(+30 files in other folders)
